test/spec_vectors/i32/fail/module_45.wat
(module (func $type-binary-1st-operand-empty-in-local.tee (local i32) (local.tee 0 (i32.add)) (drop)))